package edu.fiuba.algo3.modelo;

public class CartasInvalidas extends RuntimeException {
}
