package edu.fiuba.algo3.modelo;

public class PosicionFueraDeLimites extends RuntimeException {
}
