package edu.fiuba.algo3.vista;

public class FXMLException extends RuntimeException {
}
